# 3.17.0  以后的版本会在CMAKE_CURRENT_BINARY_DIR
# 目录生成头文件，否在会在源代码目录生成头文件
# https://cmake.org/cmake/help/latest/policy/CMP0098.html#policy:CMP0098
CMAKE_MINIMUM_REQUIRED(VERSION 3.17.0)
#CMAKE_MINIMUM_REQUIRED(VERSION 2.18.12)
SET(ENV{DBDB_SOURCE_DIR} ${CMAKE_SOURCE_DIR})
EXECUTE_PROCESS(COMMAND sh -c "${CMAKE_SOURCE_DIR}/src/utils/gen_types.sh")
PROJECT(DBDB C)
ADD_SUBDIRECTORY(src bin)
INSTALL(TARGETS dbdb 
    RUNTIME DESTINATION bin)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/sdb)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/sdb)
