cmake_minimum_required(VERSION 3.17.0)
ADD_LINK_OPTIONS($<$<CONFIG:RELEASE>:-s>)
SET(DBDB_SOURCES main.c)
ADD_SUBDIRECTORY(lib)
INCLUDE(utils/CMakeLists.txt)
INCLUDE(parser/CMakeLists.txt)
#ADD_SUBDIRECTORY(utils)
#ADD_SUBDIRECTORY(parser)
ADD_EXECUTABLE(dbdb ${DBDB_SOURCES})
#set(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
#set(BUILD_SHARED_LIBS OFF)
#set(CMAKE_EXE_LINKER_FLAGS "-static")
INCLUDE_DIRECTORIES(/usr/include/sdb ./lib ./utils ./parser)
SET(CMAKE_INCLUDE_DIRECTORIES_BEFORE on)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
TARGET_LINK_LIBRARIES(dbdb sdb)
