CMAKE_MINIMUM_REQUIRED(VERSION 3.17.0)
PROJECT(SDBLIB)
SET(LIBSDB_SRC sdb.c rowhandlers.c)
ADD_LIBRARY(sdb SHARED ${LIBSDB_SRC})
ADD_LIBRARY(sdb_static STATIC ${LIBSDB_SRC})
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
INCLUDE(FindPkgConfig)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(MYSQLCLIENT REQUIRED mysqlclient)
PKG_CHECK_MODULES(PQ REQUIRED libpq)
TARGET_LINK_LIBRARIES(sdb ${MYSQLCLIENT_LIBRARIES} ${PQ_LIBRARIES})
TARGET_INCLUDE_DIRECTORIES(sdb PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS}
    ${PQ_INCLUDE_DIRS})
TARGET_INCLUDE_DIRECTORIES(sdb_static PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS}
    ${PQ_INCLUDE_DIRS})
TARGET_LINK_DIRECTORIES(sdb PUBLIC ${MYSQLCLIENT_LIBRARY_DIRS}
    ${PQ_LIBRARY_DIRS})
TARGET_LINK_DIRECTORIES(sdb_static PUBLIC ${MYSQLCLIENT_LIBRARY_DIRS}
    ${PQ_LIBRARY_DIRS})
TARGET_COMPILE_OPTIONS(sdb PUBLIC ${MYSQLCLIENT_CLFAGS_OTHER}
    ${PQ_CLFAGS_OTHER})
TARGET_COMPILE_OPTIONS(sdb_static PUBLIC ${MYSQLCLIENT_CLFAGS_OTHER}
    ${PQ_CLFAGS_OTHER})
SET_TARGET_PROPERTIES(sdb PROPERTIES OUTPUT_NAME "sdb"
    PUBLIC_HEADER "sdb.h"
    PUBLIC_HEADER "sdb_type.h"
    VERSION 1.1 SOVERSION 1 CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(sdb_static PROPERTIES OUTPUT_NAME "sdb"
    CLEAN_DIRECT_OUTPUT 1)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
INSTALL(TARGETS sdb sdb_static
    LIBRARY DESTINATION lib
    PUBLIC_HEADER DESTINATION include/sdb)
