cmake_minimum_required(VERSION 3.17.0)
find_package(BISON)
find_package(FLEX)
BISON_TARGET(SDB_PARSER ${CMAKE_CURRENT_LIST_DIR}/conninfo_gram.y
    ${CMAKE_CURRENT_BINARY_DIR}/conninfo_gram.c)
FLEX_TARGET(SDB_SCANNER ${CMAKE_CURRENT_LIST_DIR}/conninfo_scan.l
    ${CMAKE_CURRENT_BINARY_DIR}/conninfo_scan.c)
ADD_FLEX_BISON_DEPENDENCY(SDB_SCANNER SDB_PARSER)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
# 3.17以后的版本不需要在CMAKE_CURRENT_SOURCE_DIR 中找头文件, 参看顶层CMakeLists.txt
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
list(APPEND DBDB_SOURCES
    ${BISON_SDB_PARSER_OUTPUTS}
    ${FLEX_SDB_SCANNER_OUTPUTS}
    )
    #${CMAKE_CURRENT_LIST_DIR}/gram.tab.c
    #${CMAKE_CURRENT_LIST_DIR}/scan.c
#target_sources(dbdb
#    PRIVATE
#    sdb_getopt.c
#    )
